# ProjectPython

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/db/: connection.py
